update meta tags for SEO

--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html>
     <head>
         <title>Alger Makiputin - Portfolio</title>
+        <meta name="description" content="I am a web developer, I create beautiful and stunning websites for small to medium businesses. Get a clean and fast-loading website, inquire now!" />
+        <link rel="canonical" href="https://algermakiputin.dev/" />
+        <meta property="og:locale" content="en_US" />
+        <meta property="og:type" content="website" />
+        <meta property="og:title" content="Portfolio - Alger Makiputin" />
+        <meta property="og:description" content="I am a web developer, I create beautiful and stunning websites for small to medium businesses. Get a clean and fast-loading website, inquire now!" />
+        <meta property="og:url" content="https://algermakiputin.dev/" />
+        <meta property="og:site_name" content="Alger Makiputin" />
         <link rel="stylesheet" type="text/css" href="./assets/vendor/bootstrap/css/bootstrap.min.css"/>
         <link rel="stylesheet" type="text/css" href="./assets/vendor/icofont/icofont.min.css"/>
         <link rel="stylesheet" type="text/css" href="./assets/vendor/boxicons/css/boxicons.min.css"/>
