add site verification for SEO

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <meta property="og:description" content="I am a web developer, I create beautiful and stunning websites for small to medium businesses. Get a clean and fast-loading website, inquire now!" />
         <meta property="og:url" content="https://algermakiputin.dev/" />
         <meta property="og:site_name" content="Alger Makiputin" />
+        <meta name="google-site-verification" content="dCOkG8NH6Dytue0aR_2K9F8owHAQAYDbyNtF7u7-AqU" />
+        <meta name="yandex-verification" content="3ce677b0748cc1e8" />
         <link rel="stylesheet" type="text/css" href="./assets/vendor/bootstrap/css/bootstrap.min.css"/>
         <link rel="stylesheet" type="text/css" href="./assets/vendor/icofont/icofont.min.css"/>
         <link rel="stylesheet" type="text/css" href="./assets/vendor/boxicons/css/boxicons.min.css"/>
